--- a/app/404-page.njk
+++ b/app/404-page.njk
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/404-page.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
 </head>
@@ -23,7 +23,7 @@
                 We,re sorry but we can’t seem to find the pages you request. This might be because you have typed the web address not
                 find incorrectly.
               </p>
-              <a class="page-404__link" href="#">BACK TO HOME</a>
+              <a class="page-404__link" href="index.html">BACK TO HOME</a>
             </div>
             <img class="page-404__img" src="images/404.png" alt="404 images">
           </div>
