--- a/app/index.njk
+++ b/app/index.njk
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marcho</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/index.min.css" />
 </head>
+
 
 <body>
   
@@ -18,11 +19,11 @@
     
     {% include 'app/module/_categories-info/_categories-info.html' %}
 
-    {% include 'app/module/_video-fashion/_video-fashion.html' %} 
+    {% include 'app/module/_promo/_promo.html' %}
 
     {% include 'app/module/_product/_product.html' %}
     
-    {% include 'app/module/_promo/_promo.html' %}
+    {% include 'app/module/_video-fashion/_video-fashion.html' %} 
 
     {% include 'app/module/_blog/_blog.html' %}
   </main>
