--- a/app/login.njk
+++ b/app/login.njk
@@ -5,12 +5,63 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Noros</title>
   <link rel="stylesheet" href="css/login.min.css" />
 </head>
 
 <body>
-  {% include 'app/module/_header/_header.html' %}
+  {# {% include 'app/module/_header/_header.html' %} #}
+<header class="header">
+  <div class="container">
+    <div class="header__inner">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="images/logo.png" alt="logo" />
+      </a>
+      <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
+        <ul class="menu__list">
+          <li class="menu__list-item ">
+            <a class="menu__list-link" href="index.html"> Home </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="shop.html"> shop </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link menu__list-link--active" href="login.html"> page </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="blog.html"> blog </a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="contacts.html"> contact </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-nav">
+        <a class="user-nav__link" href="#">
+          <img class="user-nav__link-img" src="images/icons/user.png" alt="user icon">
+        </a>
+        <a class="user-nav__link" href="#">
+          <img class="user-nav__link-img" src="images/icons/search.png" alt="search icon">
+        </a>
+        <a class="user-nav__link" href="#">
+          <img class="user-nav__link-img" src="images/icons/heart.png" alt="heart icon">
+          <span class="user-nav__num">
+            3
+          </span>
+        </a>
+        <a class="user-nav__link" href="#">
+          <img class="user-nav__link-img" src="images/icons/cart.png" alt="cart icon">
+          <span class="user-nav__num">
+            7
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
+</header>
 
   <main class="main">
       
