--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -176,6 +176,9 @@
       margin-bottom: 30px;
       width: 100%;
     }
+    &__text-input + .comments-form__text-input {
+      margin-left: 0;
+    }
     &__label {
       margin-right: 0;
       display: block;
@@ -362,3 +365,4 @@
     }
   }
 }
+
