--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,4 +1,4 @@
-$accent: #fe3e57;
+$accent: #3ed6fe;
 $default: #8d8d8d;
 $title: #29282d;
 $bg: #f6f6f6;
@@ -34,7 +34,8 @@ $bg: #f6f6f6;
   color: #fff;
   background-color: $accent;
   @extend %roboto-400;
-  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  box-shadow: 0px 7px 20px 0px rgba(62, 214, 254, 0.3);
+  transition: all .5s;
   cursor: pointer;
 }
 
