--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -47,7 +47,7 @@
 
   &__filters {
     width: 370px;
-    margin-right: 30px;
+    margin-left: 30px;
   }
 
   &__filter-btn {
@@ -695,6 +695,11 @@
       display: block;
     }
   }
+
+  &__content-text {
+    display: block;
+    margin-bottom: 10px;
+  }
 }
 
 .comments {
@@ -819,6 +824,10 @@
     border: 1px solid #f0f0f0;
   }
 
+  &__text-input + .comments-form__text-input {
+    margin-left: 30px;
+  }
+
   &__textarea {
     border: 1px solid #f0f0f0;
     padding: 15px 20px;
@@ -884,7 +893,7 @@
       border: none;
       border-radius: 50%;
       cursor: pointer;
-      box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+      box-shadow: 0px 7px 20px 0px rgba(62, 214, 254, 0.3);
 
       path {
         fill: #fff;
@@ -1193,6 +1202,7 @@
       }
       path {
         fill: #727272;
+        transition: all .3s;
       }
     }
   }
@@ -1213,6 +1223,7 @@
     font-size: 22px;
     @extend %roboto-500;
     color: $title;
+    text-transform: uppercase;
   }
 }
 
